# Soundright

./: .env.example  .gitignore  package.json  prisma.config.ts  tsconfig.tsbuildinfo
contracts/distributor/: Cargo.toml  Odra.toml
contracts/distributor/src/: lib.rs  royalty_distributor.rs
contracts/oracle/: Cargo.toml  Odra.toml
contracts/oracle/src/: lib.rs  stream_oracle.rs
contracts/royalty-token/: Cargo.toml  Odra.toml
contracts/royalty-token/src/: lib.rs  royalty_token.rs
contracts/royalty-token/tests/: test.rs
cron/: weekly-distribution.ts
goals/: plan.md  plan_1.md  plan_10.md  plan_11.md  plan_12.md  plan_13.md  plan_14.md  plan_15.md  plan_16.md  plan_17.md  plan_18.md  plan_19.md  plan_2.md  plan_20.md  plan_3.md  plan_4.md  plan_5.md  plan_6.md  plan_7.md  plan_8.md  plan_9.md
prisma/: schema.prisma
scripts/: build-contracts.sh  deploy-contracts.sh  verify-deployment.sh
src/agents/: fraud-detector.ts  recommendations.ts  royalty-calculator.ts  yield-predictor.ts
src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/marketplace/: page.tsx
src/components/ai/: RecommendationCard.tsx
src/components/charts/: PlayCountChart.tsx
src/components/error/: ClientLayout.tsx  ErrorBoundary.tsx
src/components/landing/: FeaturedSongs.tsx  Footer.tsx  HeroSection.tsx  HowItWorks.tsx  (+2 more)
src/lib/: ai-search.ts  ai.ts  api-error-handler.ts  api-response.ts  cache.ts  casper.ts  contracts.ts  db.ts  distribution.ts  lastfm.ts  middleware.ts  music-data.ts  rate-limit.ts  server-init.ts  spotify.ts  x402.ts
(+53 files in other folders)
